test/fail/api/string/string_split_by_empty.lly
#[
ValueError: Cannot split by empty string.
Traceback:
    from [C]: in string::split
    from string_split_by_empty.lly:8: in __main__
]#

"123".split("")
